@@ -13,7 +13,6 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-
 import com.github.jk1.license.filter.LicenseBundleNormalizer
 import groovy.transform.CompileStatic
 import groovy.transform.Memoized
@@ -23,15 +22,15 @@ import java.text.SimpleDateFormat
 import java.util.regex.Pattern
 
 plugins {
-  id 'com.diffplug.spotless' version '7.0.2'
+  id 'com.diffplug.spotless' version '7.0.3'
   id 'com.github.jk1.dependency-license-report' version '2.9'
   id 'com.jfrog.artifactory' version '5.2.5'
-  id 'me.champeau.jmh' version '0.7.2' apply false
-  id 'net.ltgt.errorprone' version '4.1.0'
+  id 'me.champeau.jmh' version '0.7.3' apply false
+  id 'net.ltgt.errorprone' version '4.2.0'
   id 'maven-publish'
   id 'jacoco'
   id 'jacoco-report-aggregation'
-  id 'org.sonarqube' version '6.0.1.5171'
+  id 'org.sonarqube' version '6.2.0.5505'
 }
 
 sonarqube {
@@ -42,6 +41,10 @@ sonarqube {
     property "sonar.host.url", "https://sonarcloud.io"
     property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml"
     property "sonar.coverage.exclusions", "acceptance-tests/**/*"
+    // Exclude OptionalUsedAsFieldOrParameterType rule - common pattern in Besu codebase
+    property "sonar.issue.ignore.multicriteria", "e1"
+    property "sonar.issue.ignore.multicriteria.e1.ruleKey", "java:S3553"
+    property "sonar.issue.ignore.multicriteria.e1.resourceKey", "**/*.java"
   }
 }
 
@@ -79,6 +82,14 @@ def _intCmdArg(name, defaultValue) {
 
 def _intCmdArg(name) {
   return _intCmdArg(name, null)
+}
+
+def _strCmdArg(name, defaultValue) {
+  return project.hasProperty(name) ? project.property(name) as String : defaultValue
+}
+
+def _strCmdArg(name) {
+  return _strCmdArg(name, null)
 }
 
 def _strListCmdArg(name, defaultValue) {
@@ -149,6 +160,10 @@ configure(allprojects - project(':platform')) {
   java {
     sourceCompatibility = 21
     targetCompatibility = 21
+
+    consistentResolution {
+      useCompileClasspathVersions()
+    }
   }
 
   repositories {
@@ -189,6 +204,9 @@ configure(allprojects - project(':platform')) {
     annotationProcessor(platform(project(':platform')))
 
     testAnnotationProcessor(platform(project(':platform')))
+
+    // for validation annotations like @NotNull
+    implementation 'jakarta.validation:jakarta.validation-api'
 
     components.all(BouncyCastleCapability)
     errorprone 'com.google.errorprone:error_prone_core'
@@ -379,7 +397,7 @@ configure(allprojects - project(':platform')) {
   javadoc {
     options.addBooleanOption('Xdoclint:all', true)
     // disable doc lint checking for generated code and acceptance tests dsl.
-    options.addBooleanOption('Xdoclint/package:-org.hyperledger.besu.privacy.contracts.generated,' +
+    options.addBooleanOption('Xdoclint/package:' +
       '-org.hyperledger.besu.tests.acceptance.*,' +
       '-org.hyperledger.besu.tests.web3j.generated,' +
       // TODO: these are temporary excluded from lint (ethereum sub modules), it should be removed in a future PR.
@@ -403,8 +421,6 @@ configure(allprojects - project(':platform')) {
       '-org.hyperledger.besu.ethereum.forkid,' +
       '-org.hyperledger.besu.ethereum.mainnet,' +
       '-org.hyperledger.besu.ethereum.mainnet.*,' +
-      '-org.hyperledger.besu.ethereum.privacy,' +
-      '-org.hyperledger.besu.ethereum.privacy.*,' +
       '-org.hyperledger.besu.ethereum.processing,' +
       '-org.hyperledger.besu.ethereum.proof,' +
       '-org.hyperledger.besu.ethereum.storage,' +
@@ -428,8 +444,6 @@ configure(allprojects - project(':platform')) {
       '-org.hyperledger.besu.ethereum.referencetests,' +
       //rlp module
       '-org.hyperledger.besu.ethereum.rlp,' +
-      // stratum module
-      '-org.hyperledger.besu.ethereum.stratum,' +
       // trie module
       '-org.hyperledger.besu.ethereum.trie.*,' +
       '-org.hyperledger.besu.ethereum.trie,' +
@@ -456,7 +470,7 @@ task checkMavenCoordinateCollisions {
           if (coordinate.toString().startsWith("org") && coordinates.containsKey(coordinate)) {
             throw new GradleException("Duplicate maven coordinates detected, ${coordinate} is used by " +
             "both ${coordinates[coordinate]} and ${it.path}.\n" +
-            "Please add a `publishing` script block to one or both subprojects.")
+            "Prefer automatic artifactId creation or if not possible disambiguate manually.")
           }
           coordinates[coordinate] = it.path
         }
@@ -487,7 +501,7 @@ subprojects {
     dependencies { testImplementation sourceSets.testSupport.output }
 
     task testSupportJar(type: Jar) {
-      archiveBaseName = "${project.name}-support-test"
+      archiveBaseName = calculateArtifactId(project) + '-support-test'
       archiveClassifier = 'test-support'
       from sourceSets.testSupport.output
     }
@@ -541,6 +555,7 @@ subprojects {
       publications {
         mavenJava(MavenPublication) {
           groupId "org.hyperledger.besu.internal"
+          artifactId calculateArtifactId(project)
           version "${project.version}"
           if (sourceSetIsPopulated("main")) {
             from components.java
@@ -617,27 +632,42 @@ subprojects {
 
   if (file('src/jmh').directory) {
     apply plugin: 'me.champeau.jmh'
+    tasks.named("jmh") {
+      description = "Usage: gradle jmh -Pf=2 -Pwi=3 -Pi=5 -Pincludes=MyBench -PasyncProfiler=<libPath> -PasyncProfilerOptions=<options>\n" +
+        "\nRun JMH benchmarks in each of the projects. Allows for controlling JMH execution directly from the command line.\n" +
+        "\t-Pf=<forks>\tHow many times to fork a single benchmark. Use 0 to disable forking altogether. Defaults to 2 forks.\n" +
+        "\t-Pwf=<warmupForks>\tHow many warmup forks to make for a single benchmark. 0 to disable warmup forks. Defaults to 0 forks.\n" +
+        "\t-Pwi=<warmupIterations>\tNumber of warmup iterations to do. Defaults to 1 iteration.\n" +
+        "\t-Pi=<iterations>\tNumber of measurement iterations to do. Defaults to 10 iterations.\n" +
+        "\t-Pbm=<benchmarkMode>\tBenchmark mode. Available modes are: [Throughput/thrpt, AverageTime/avgt, SampleTime/sample, SingleShotTime/ss, All/all]. Defaults to `avgt`.\n" +
+        "\t-Pincludes=<includePattern>\tInclude pattern (regular expression) for benchmarks to be executed. Defaults to including all benchmarks.\n" +
+        "\t-PasyncProfiler=<libPath>\tLibrary path to fetch the Async profiler from. Default is to disable profiling.\n" +
+        "\t-PasyncProfilerOptions=<asyncProfilerOptions>\tOptions to pass on to the Async profiler separated by ';'. Default is to produce a flamegraph with all other default profiler options.\n"
+    }
 
     jmh {
-      // Allows to control JMH execution directly from the command line. I typical execution may look
-      // like:
-      //    gradle jmh -Pf=2 -Pwi=3 -Pi=5 -Pinclude=MyBench
-      // which will run 2 forks with 3 warmup iterations and 5 normal ones for each, and will only
-      // run the benchmark matching 'MyBench' (a regexp).
-      warmupForks = _intCmdArg('wf')
-      warmupIterations = _intCmdArg('wi')
-      fork = _intCmdArg('f')
-      iterations = _intCmdArg('i')
-      benchmarkMode = _strListCmdArg('bm')
-      includes = _strListCmdArg('include', [''])
-      humanOutputFile = project.file("${project.buildDir}/reports/jmh/results.txt")
-      resultFormat = 'JSON'
+      jmhVersion = '1.37'
+      warmupForks = _intCmdArg('wf', 0)
+      warmupIterations = _intCmdArg('wi', 1)
+      fork = _intCmdArg('f', 2)
+      iterations = _intCmdArg('i', 10)
+      benchmarkMode = _strListCmdArg('bm', ['avgt'])
+      includes = _strListCmdArg('includes', [''])
+      var asyncProfiler = _strCmdArg('asyncProfiler')
+      var asyncProfilerOptions = _strCmdArg('asyncProfilerOptions', 'output=flamegraph')
+      if (asyncProfiler != null) {
+        profilers = [
+          'async:libPath=' + asyncProfiler + ';' + asyncProfilerOptions
+        ]
+      }
       duplicateClassesStrategy = DuplicatesStrategy.WARN
+      jvmArgs = [
+        '-XX:+EnableDynamicAgentLoading'
+      ]
     }
 
     dependencies {
       jmhAnnotationProcessor(platform(project(':platform')))
-      jmh 'org.slf4j:slf4j-api'
     }
   }
 
@@ -714,8 +744,8 @@ startScripts {
     "-XX:StartFlightRecording,settings=default.jfc",
     "-Xlog:jfr*=off"
   ]
-  unixStartScriptGenerator.template = resources.text.fromFile("${projectDir}/besu/src/main/scripts/unixStartScript.txt")
-  windowsStartScriptGenerator.template = resources.text.fromFile("${projectDir}/besu/src/main/scripts/windowsStartScript.txt")
+  unixStartScriptGenerator.template = resources.text.fromFile("${projectDir}/app/src/main/scripts/unixStartScript.txt")
+  windowsStartScriptGenerator.template = resources.text.fromFile("${projectDir}/app/src/main/scripts/windowsStartScript.txt")
   doLast { tweakStartScript(startScripts) }
 }
 
@@ -724,8 +754,8 @@ task untunedStartScripts(type: CreateStartScripts) {
   classpath = startScripts.classpath
   outputDir = startScripts.outputDir
   applicationName = 'besu-untuned'
-  unixStartScriptGenerator.template = resources.text.fromFile("${projectDir}/besu/src/main/scripts/unixStartScript.txt")
-  windowsStartScriptGenerator.template = resources.text.fromFile("${projectDir}/besu/src/main/scripts/windowsStartScript.txt")
+  unixStartScriptGenerator.template = resources.text.fromFile("${projectDir}/app/src/main/scripts/unixStartScript.txt")
+  windowsStartScriptGenerator.template = resources.text.fromFile("${projectDir}/app/src/main/scripts/windowsStartScript.txt")
   doLast { tweakStartScript(untunedStartScripts) }
 }
 
@@ -737,8 +767,8 @@ task evmToolStartScripts(type: CreateStartScripts) {
   defaultJvmOpts = [
     "-Dsecp256k1.randomize=false"
   ]
-  unixStartScriptGenerator.template = resources.text.fromFile("${projectDir}/besu/src/main/scripts/unixStartScript.txt")
-  windowsStartScriptGenerator.template = resources.text.fromFile("${projectDir}/besu/src/main/scripts/windowsStartScript.txt")
+  unixStartScriptGenerator.template = resources.text.fromFile("${projectDir}/app/src/main/scripts/unixStartScript.txt")
+  windowsStartScriptGenerator.template = resources.text.fromFile("${projectDir}/app/src/main/scripts/windowsStartScript.txt")
   doLast { tweakStartScript(evmToolStartScripts) }
 }
 
@@ -830,6 +860,7 @@ task distDocker {
   doLast {
     copy {
       from file("${projectDir}/docker/Dockerfile")
+      from file("${projectDir}/docker/pyroscope.properties")
       into(dockerBuildDir)
     }
     exec {
@@ -1009,6 +1040,15 @@ def calculateVersion() {
   }
 }
 
+def calculateArtifactId(configuringProject) {
+  def currentProject = configuringProject
+  def projectNames = [currentProject.name]
+  while((currentProject = currentProject.getParent()) != null) {
+    projectNames << currentProject.name
+  }
+  return projectNames.reverse().join('-')
+}
+
 def getGitCommitDetails(length = 8) {
   try {
     def gitFolder = "$projectDir/.git/"
@@ -1070,7 +1110,7 @@ dependencies {
   errorprone 'com.google.errorprone:error_prone_core'
   // https://github.com/hyperledger/besu-errorprone-checks/
   errorprone 'org.hyperledger.besu:besu-errorprone-checks'
-  implementation project(':besu')
+  implementation project(':app')
   implementation project(':ethereum:evmtool')
 }
 
@@ -1101,10 +1141,10 @@ distributions {
   main {
     contents {
       from("./LICENSE") { into "." }
-      from("build/reports/license/license-dependency.html") { into "." }
-      from("./docs/GettingStartedBinaries.md") { into "." }
-      from("./docs/DocsArchive0.8.0.html") { into "." }
-      from("./besu/src/main/scripts/besu-entry.sh") { into "./bin/" }
+      from("./build/reports/dependency-license/index.html") { into "."}
+      rename("index.html","license-dependency.html")
+      from("./docs/README.md") { into "." }
+      from("./app/src/main/scripts/besu-entry.sh") { into "./bin/" }
       from(autocomplete) { into "." }
     }
   }
